# visible-gltf

./: .gitignore  meson.build  thirdpartylicenses.md
assets/: model.glb
shaders/: triangle.vert
src/: alloc.c  alloc.h  engine.c  engine.h  graphics.c  graphics.h  hash.c  hash.h  image.c  image.h  log.c  log.h  main.c  maths.c  maths.h  platform.c  platform.h  platform_sdl.c  platform_sdl.h  renderer.c  renderer.h  str.c  str.h  ui.c  ui.h
src/renderer/: renderer.c  renderer.h  vma_usage.cpp  vma_usage.h
